Séparation des menus de gestion des abonnements et des paiements avec interfaces dédiées et amélioration du service Paiement (méthodes CRUD, génération d’échéances, rapports, gestion des statuts)